ping_pong/manifests/deployment.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: ping-pong-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      containers:
        - name: ping-pong-container
          image: twodogwalker/ping-pong-app:0.18
          imagePullPolicy: IfNotPresent
