ping_pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: ping-pong-app-service
spec:
  type: ClusterIP
  selector:
    app: log-output-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5100
