ping_pong/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: exercises
  name: ping-pong-route
spec:
  parentRefs:
  - name: my-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    - path:
        type: PathPrefix
        value: /pings
    backendRefs:
    - name: ping-pong-app-service
      port: 80
